fixed width to avoid jumpiness

--- a/style.css
+++ b/style.css
@@ -30,10 +30,12 @@ canvas{
 
 main {
     margin: 0 auto;
-    max-width: 720px;
+    min-width: 600px;
+    width: 50vw;
 }
 
 #results {
+    margin: 0 auto;
     padding: 1rem;
     display: grid;
     grid-gap: 1rem;
